--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/home/home.component.html
@@ -34,6 +34,6 @@
 		</div>
 	</section>
 
-	<app-select-agenda [professionalId]="idProfesional"></app-select-agenda>
+	<app-select-agenda></app-select-agenda>
 
 </app-content>
