--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/concept-typeahead-search/concept-typeahead-search.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/concept-typeahead-search/concept-typeahead-search.component.html
@@ -1,10 +1,15 @@
 <form class="full-width">
-	<mat-form-field class="full-width">
-		<input type="text" placeholder="{{ this.placeholder | translate }}" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
-		<mat-autocomplete #auto="matAutocomplete" (optionSelected)="handleOptionSelected($event)" [displayWith]="getDisplayName">
+	<mat-form-field class="full-width" [appearance]="appearanceOutline ? 'outline' : 'legacy'">
+		<input type="text" placeholder="{{ this.placeholder | translate }}" aria-label="Number" matInput
+			[formControl]="myControl" [matAutocomplete]="auto">
+		<mat-autocomplete #auto="matAutocomplete" (optionSelected)="handleOptionSelected($event)"
+			[displayWith]="getDisplayName" autoActiveFirstOption>
 			<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
 				{{option.pt.term}}
 			</mat-option>
 		</mat-autocomplete>
+		<button type="button" matSuffix mat-icon-button *ngIf="showSearchIcon">
+			<mat-icon>search</mat-icon>
+		</button>
 	</mat-form-field>
 </form>
