tg-8105. [FE] Achicar tamaño del campo de búsqueda de vacuna para que coincida con su botón BUSCAR

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.scss
@@ -22,3 +22,14 @@
   align-self: center;
   top: 0.09em;
 }
+
+.search.mat-form-field-appearance-outline {
+
+  .mat-form-field-flex {
+    padding: 0 0 0 .75em;
+  }
+
+  .mat-form-field-infix {
+    padding: .5em 0;
+  }
+}
