tg-8102 [FE] Cambiar color del botón que cierra los diálogos.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
 	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas.agregar_vacunas.agregar_vacuna.TITLE'"></div>
-	<button mat-icon-button color="warn" (click)="dialogRef.close();">
+	<button mat-icon-button (click)="dialogRef.close();">
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
