--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="end">
-	<button matSuffix color="warn" mat-icon-button [mat-dialog-close]>
+	<button matSuffix mat-icon-button [mat-dialog-close]>
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
