--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="end">
-    <button id="close-modal" mat-button color="warn" mat-icon-button aria-label="close" (click)="closeModal()">
+    <button id="close-modal" mat-button mat-icon-button aria-label="close" (click)="closeModal()">
         <mat-icon>close</mat-icon>
     </button>
 </div>
