--- a/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/discard-warning/discard-warning.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/dialogs/discard-warning/discard-warning.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="end">
-	<button color="warn" matSuffix class="close" mat-icon-button [mat-dialog-close]>
+	<button matSuffix class="close" mat-icon-button [mat-dialog-close]>
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
