--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacunas/agregar-vacunas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacunas/agregar-vacunas.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
     <div class="mat-h2 margin-bottom-0" [translate]="'ambulatoria.paciente.vacunas.agregar_vacunas.TITLE'"></div>
-    <button mat-icon-button color="warn" (click)="dialogRef.close();">
+    <button mat-icon-button (click)="dialogRef.close();">
         <mat-icon>close</mat-icon>
     </button>
 </div>
