tg-8108 [FE] Agregar traducciones

--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
@@ -36,23 +36,23 @@
 						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('minlength') || this.form.controls['newPassword'].hasError('required'),
 						'text-valid': !this.form.controls['newPassword'].hasError('minlength') && !this.form.controls['newPassword'].hasError('required')}">
 							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
-							Mínimo de 8 dígitos
+							<span translate="auth.access-data-reset.form.ERROR_MINLENGTH"></span>
 						</span>
 						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('mayus') || this.form.controls['newPassword'].hasError('required'),
 						'text-valid': !this.form.controls['newPassword'].hasError('mayus') && !this.form.controls['newPassword'].hasError('required')}">
 							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
-							Mayúscula
+							<span translate="auth.access-data-reset.form.ERROR_UPPERCASE"></span>
 						</span>
 						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('min') || this.form.controls['newPassword'].hasError('required'),
 						'text-valid': !this.form.controls['newPassword'].hasError('min') && !this.form.controls['newPassword'].hasError('required')}">
 							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
-							Mínuscula
+							<span translate="auth.access-data-reset.form.ERROR_LOWERCASE"></span>
 						</span>
 					</div>
 					<span [ngClass]="{ 'text-error': this.form.controls['newPassword'].hasError('number') || this.form.controls['newPassword'].hasError('required'),
 					'text-valid': !this.form.controls['newPassword'].hasError('number') && !this.form.controls['newPassword'].hasError('required')}">
 						<mat-icon class="material-icons-outlined">check_circle</mat-icon>
-						Número
+						<span translate="auth.access-data-reset.form.ERROR_NUMBER"></span>
 					</span>
 				</div>
 			</mat-card-content>
