tg-8119. [FE] Agregar mensaje al campo de búsqueda local de conceptos

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/concept-typeahead-search/concept-typeahead-search.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/concept-typeahead-search/concept-typeahead-search.component.html
@@ -8,6 +8,9 @@
 				{{option.pt.term}}
 			</mat-option>
 		</mat-autocomplete>
+		<mat-hint>
+			{{ 'historia-clinica.concept-typeahead-search.AT_LEAST_THREE_CHARACTERS_MESSAGE' | translate }}
+		</mat-hint>
 		<button type="button" matSuffix mat-icon-button *ngIf="showSearchIcon">
 			<mat-icon>search</mat-icon>
 		</button>
