tg-8011 [FE] Agregar opción para mostrar la contraseña y validaciones en el formaulario de cambio de contraseña desde la WebApp

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-	max-width: 400px;
+	max-width: 420px;
 	margin: 15vh auto;
 }
 mat-card-title{
@@ -15,8 +15,9 @@ mat-card-title{
 }
 .form {
 	min-width: 150px;
-	max-width: 300px;
 	width: 100%;
+	margin-left: 16px;
+	margin-right: 16px;
 }
 .mat-list{
 	padding-top: 30px;
@@ -40,4 +41,29 @@ mat-card-title{
 
 .text-danger {
 	color: red;
+}
+
+
+.validation {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.125;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+	letter-spacing: normal;
+	margin: -20px 15px 0 0;
+
+	.text-error {
+		color: #BDBDBD;
+	}
+
+	.text-valid {
+		color: #27AE60;
+	}
+}
+
+mat-icon {
+	font-size: 14px;
+	height: 14px;
+	width: 14px;
+	margin-right: 4px;
 }
