--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.html
@@ -30,44 +30,54 @@
 					</div>
 				</mat-list-item>
 			</mat-list>
-			<form [formGroup]="form" class="form"  (ngSubmit)="submit()">
-				<app-form-input>
-					<mat-form-field appearance="outline">
-						<mat-label translate="auth.access-data-reset.form.USERNAME_LABEL"></mat-label>
-						<input formControlName="username"
-							   type="text" matInput>
-						<mat-error *ngIf="hasError('required', 'username')">
-							<span translate="auth.access-data-reset.form.USERNAME_REQUIRED"></span>
-						</mat-error>
-					</mat-form-field>
-				</app-form-input>
-				<app-form-input>
-					<mat-form-field appearance="outline">
-						<mat-label translate="auth.access-data-reset.form.PASSWORD_LABEL"></mat-label>
-						<input formControlName="password"
-							   type="password" matInput>
-						<mat-error *ngIf="hasError('required', 'password')">
-							<span translate="auth.access-data-reset.form.PASSWORD_REQUIRED"></span>
-						</mat-error>
-					</mat-form-field>
-				</app-form-input>
-				<app-form-input>
-					<mat-form-field appearance="outline">
-						<mat-label translate="auth.access-data-reset.form.REPASSWORD_LABEL"></mat-label>
-						<input formControlName="repassword"
-							   type="password" matInput>
-						<mat-error *ngIf="hasError('required', 'repassword')">
-							<span translate="auth.access-data-reset.form.REPASSWORD_REQUIRED"></span>
-						</mat-error>
-						<mat-error *ngIf="hasError('notEquivalent', 'repassword')">
-							<span translate="auth.access-data-reset.form.REPASSWORD_NOTEQUIVALENT"></span>
-						</mat-error>
-					</mat-form-field>
-				</app-form-input>
-				<mat-card-actions align="end" >
-					<button class="uppercase" content mat-button  mat-raised-button color="primary" type="submit" translate="auth.access-data-reset.form.SUBMIT"></button>
-				</mat-card-actions>
-			</form>
+				<form [formGroup]="form" class="form"  (ngSubmit)="submit()">
+					<app-form-input>
+						<mat-form-field appearance="outline">
+							<mat-label translate="auth.access-data-reset.form.USERNAME_LABEL"></mat-label>
+							<input formControlName="username"
+								   type="text" matInput>
+							<mat-error *ngIf="hasError('required', 'username')">
+								<span translate="auth.access-data-reset.form.USERNAME_REQUIRED"></span>
+							</mat-error>
+						</mat-form-field>
+					</app-form-input>
+					<app-form-input>
+						<mat-form-field appearance="outline">
+							<mat-label translate="auth.access-data-reset.form.PASSWORD_LABEL"></mat-label>
+							<input formControlName="password"
+								   [type]="hidePassword ? 'password' : 'text'"
+								   matInput>
+							<mat-icon matSuffix color="primary" (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+						</mat-form-field>
+						<div class="validation" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+							<div  fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px">
+							<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('minlength') || this.form.controls['password'].hasError('required'),
+							'text-valid': !this.form.controls['password'].hasError('minlength') && !this.form.controls['password'].hasError('required')}">
+								<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+								<span translate="auth.access-data-reset.form.ERROR_MINLENGTH"></span>
+							</span>
+								<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('mayus') || this.form.controls['password'].hasError('required'),
+							'text-valid': !this.form.controls['password'].hasError('mayus') && !this.form.controls['password'].hasError('required')}">
+								<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+									<span translate="auth.access-data-reset.form.ERROR_UPPERCASE"></span>
+							</span>
+								<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('min') || this.form.controls['password'].hasError('required'),
+							'text-valid': !this.form.controls['password'].hasError('min') && !this.form.controls['password'].hasError('required')}">
+								<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+									<span translate="auth.access-data-reset.form.ERROR_LOWERCASE"></span>
+							</span>
+								<span [ngClass]="{ 'text-error': this.form.controls['password'].hasError('number') || this.form.controls['password'].hasError('required'),
+						'text-valid': !this.form.controls['password'].hasError('number') && !this.form.controls['password'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+								<span translate="auth.access-data-reset.form.ERROR_NUMBER"></span>
+						</span>
+							</div>
+						</div>
+					</app-form-input>
+					<mat-card-actions align="end" >
+						<button class="uppercase" content mat-button  mat-raised-button color="primary" type="submit" translate="auth.access-data-reset.form.SUBMIT"></button>
+					</mat-card-actions>
+				</form>
 		</mat-card-content>
 	</mat-card>
 
@@ -83,7 +93,7 @@
 				<span *ngIf="apiResponse.ok" translate="auth.access-data-reset.result.OK"></span>
 				<span *ngIf="apiResponse.error" translate="auth.access-data-reset.result.ERROR_TITLE"></span>
 			</mat-card-title>
-			<mat-card-subtitle  align="center" *ngIf="apiResponse.ok" >
+			<mat-card-subtitle  align="center" *ngIf="apiResponse.ok">
 				<strong class="primary link" [routerLink]="'/auth'" translate="auth.access-data-reset.result.GO_TO_LINK"></strong>
 			</mat-card-subtitle>
 			<mat-card-subtitle  *ngIf="apiResponse.error" >
