--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/password-reset/password-reset.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/password-reset/password-reset.component.html
@@ -1,47 +1,53 @@
 <app-content width="narrow">
 	<form [formGroup]="form" (ngSubmit)="submit()" *ngIf="!apiResponse">
-		<mat-card>
-			<mat-card-header>
+		<mat-card fxLayout="column" fxLayoutAlign=" center">
+			<mat-card-header fxLayoutAlign="center">
 				<mat-card-title>
 					<span translate="auth.password-reset.form.TITLE"></span>
 				</mat-card-title>
 			</mat-card-header>
-			<mat-card-content>
-				<app-form-input label="auth.password-reset.form.PASSWORD_LABEL">
+			<mat-card-content fxLayoutGap="12px">
+				<app-form-input>
 					<mat-form-field [floatLabel]="'never'" appearance="outline">
 						<input formControlName="password"
-							type="password"
-							placeholder="{{'auth.password-reset.form.PASSWORD_PLACEHOLDER' | translate }}"
-							matInput
-						>
-						<mat-error *ngIf="hasError('required', 'password')">
-							<span translate="auth.password-reset.form.PASSWORD_REQUIRED"></span>
-						</mat-error>
+							   [type]="hidePassword ? 'password' : 'text'"
+							   placeholder="{{'auth.password-reset.form.PASSWORD_PLACEHOLDER' | translate }}"
+							   matInput>
+						<mat-icon matSuffix color="primary" (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
 					</mat-form-field>
 				</app-form-input>
-				<app-form-input label="auth.password-reset.form.REPASSWORD_LABEL">
-					<mat-form-field [floatLabel]="'never'" appearance="outline">
-						<input formControlName="repassword"
-							type="password"
-							placeholder="{{'auth.password-reset.form.REPASSWORD_PLACEHOLDER' | translate }}"
-							matInput
-						>
-						<mat-error *ngIf="hasError('required', 'repassword')">
-							<span translate="auth.password-reset.form.REPASSWORD_REQUIRED"></span>
-						</mat-error>
-						<mat-error *ngIf="hasError('notEquivalent', 'repassword')">
-							<span translate="auth.password-reset.form.REPASSWORD_NOTEQUIVALENT"></span>
-						</mat-error>
-					</mat-form-field>
-				</app-form-input>
+				<div class="validation" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+					<div  fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px">
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('minlength') || this.form.controls['password'].hasError('required'),
+						'text-valid': !this.form.controls['password'].hasError('minlength') && !this.form.controls['password'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							<span translate="auth.access-data-reset.form.ERROR_MINLENGTH"></span>
+						</span>
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('mayus') || this.form.controls['password'].hasError('required'),
+						'text-valid': !this.form.controls['password'].hasError('mayus') && !this.form.controls['password'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							<span translate="auth.access-data-reset.form.ERROR_UPPERCASE"></span>
+						</span>
+						<span fxLayoutAlign="center" [ngClass]="{ 'text-error': this.form.controls['password'].hasError('min') || this.form.controls['password'].hasError('required'),
+						'text-valid': !this.form.controls['password'].hasError('min') && !this.form.controls['password'].hasError('required')}">
+							<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+							<span translate="auth.access-data-reset.form.ERROR_LOWERCASE"></span>
+						</span>
+						<span [ngClass]="{ 'text-error': this.form.controls['password'].hasError('number') || this.form.controls['password'].hasError('required'),
+						'text-valid': !this.form.controls['password'].hasError('number') && !this.form.controls['password'].hasError('required')}">
+						<mat-icon class="material-icons-outlined">check_circle</mat-icon>
+						<span translate="auth.access-data-reset.form.ERROR_NUMBER"></span>
+					</span>
+					</div>
+				</div>
 			</mat-card-content>
 			<mat-card-actions>
-				<button mat-button type="submit" translate="auth.login.form.SUBMIT"></button>
+				<button mat-flat-button color="primary" type="submit" translate="auth.login.form.SUBMIT"></button>
 			</mat-card-actions>
 		</mat-card>
 	</form>
 	<mat-card *ngIf="apiResponse">
-		<mat-card-header>
+		<mat-card-header fxLayoutAlign="center center">
 			<mat-card-title>
 				<span translate="auth.password-reset.result.TITLE"></span>
 			</mat-card-title>
