--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 				<div fxLayoutAlign="end center">
-					<button id="print-appointment" name="print-appointment" mat-stroked-button color="primary" btn-block type="button"
+					<button id="print-appointment" mat-stroked-button color="primary" btn-block type="button"
 							(click)="getAppointmentTicketReport()">
 						<mat-icon fontSet="material-icons-outlined" >print</mat-icon>
 						<span class="uppercase" [translate]="'turnos.appointment.PRINT'"></span>
