--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.scss
@@ -38,17 +38,17 @@
 	word-break: break-word;
 }
 
-.blue {
-	background-color: #b0d2f0;
-	color: #1A73E8;
-}
-
 .red {
 	background-color: rgba(255, 163, 163, 0.93);
 	color: #EB5757;
 }
 
-.red-reject {
-	background-color: rgb(255 163 163 / 51%);
-	color: #ff9a9a;
+.grey {
+	background-color: #F2F2F2;
+	color: #BDBDBD;
+}
+
+.green {
+	background-color: #a1f3b4;
+	color: #27AE60;
 }
